<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                tools:context="fr.ravichandrane.sesame.Controller.NewUserActivity">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_below="@id/toolBar"
        android:layout_width="272.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33.5dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/usernickNameField"
            android:hint="@string/hint_userNickName"
            android:inputType="text"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textInputColor"
            android:textSize="16sp"
            app:met_primaryColor = "@color/accentColor"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/usernameField"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textInputColor"
            android:textSize="16sp"
            app:met_primaryColor = "@color/accentColor"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userfirstnameField"
            android:hint="@string/userfirstname_hint"
            android:inputType="text"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textInputColor"
            app:met_primaryColor = "@color/accentColor"
            app:met_floatingLabel="highlight"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/useremailField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textInputColor"
            app:met_primaryColor = "@color/accentColor"
            app:met_floatingLabel="highlight"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/textHintColor"
            android:textColor="@color/textInputColor"
            app:met_primaryColor = "@color/accentColor"
            app:met_floatingLabel="highlight"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"/>


    </LinearLayout>



</RelativeLayout>
